Added role for Admin Student and Teacher

--- a/frontend/src/containers/Auth/Register/Register.scss
+++ b/frontend/src/containers/Auth/Register/Register.scss
@@ -123,7 +123,6 @@
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      width: 250px;
       padding: 0.8rem;
     }
     // Toggle specific styles
@@ -140,80 +139,51 @@
       }
     }
 
+    .select-field {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+
+      select {
+        background-color: #343d45;
+        color: white;
+        padding: 12px;
+        width: 250px;
+        border: none;
+        font-size: 17px;
+        box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
+        -webkit-appearance: button;
+        appearance: button;
+        outline: none;
+
+        option {
+          padding: 30px;
+        }
+      }
+    }
+
+    .select-field::before {
+      font-family: FontAwesome;
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 20%;
+      height: 100%;
+      text-align: center;
+      font-size: 28px;
+      line-height: 45px;
+      color: rgba(255, 255, 255, 0.5);
+      background-color: rgba(255, 255, 255, 0.1);
+      pointer-events: none;
+    }
+
+    .select-field:hover::before {
+      color: rgba(255, 255, 255, 0.6);
+      background-color: rgba(255, 255, 255, 0.2);
+    }
+
     // Since we can't style the checkbox directly, we "hide" it so we can draw the toggle.
-    .toggle__input {
-      clip: rect(0 0 0 0);
-      clip-path: inset(50%);
-      height: 1px;
-      overflow: hidden;
-      position: absolute;
-      white-space: nowrap;
-      width: 1px;
-
-      // This style sets the focus ring. The ":not([disabled])" prevents the focus ring from creating a flash when the element is clicked.
-      &:not([disabled]):active + .toggle-track,
-      &:not([disabled]):focus + .toggle-track {
-        border: 1px solid transparent;
-        box-shadow: $focus-ring;
-      }
-
-      &:disabled + .toggle-track {
-        cursor: not-allowed;
-        opacity: 0.7;
-      }
-    }
-
-    .toggle-track {
-      background: $track-background;
-      border: 1px solid $track-border;
-      border-radius: 100px;
-      cursor: pointer;
-      display: flex;
-      height: $track-height;
-      margin-right: 12px;
-      position: relative;
-      width: $track-width;
-    }
-
-    .toggle-indicator {
-      align-items: center;
-      background: $dark;
-      border-radius: $toggle-indicator-size;
-      bottom: 2px;
-      display: flex;
-      height: $toggle-indicator-size;
-      justify-content: center;
-      left: 2px;
-      outline: $highContrastModeSupport;
-      position: absolute;
-      transition: $speed;
-      width: $toggle-indicator-size;
-    }
-
-    // The check mark is optional
-    .checkMark {
-      fill: #fff;
-      height: $toggle-indicator-size - 4;
-      width: $toggle-indicator-size - 4;
-      opacity: 0;
-      transition: opacity $speed ease-in-out;
-    }
-
-    .toggle__input:checked + .toggle-track .toggle-indicator {
-      background: $dark;
-      transform: translateX($track-width - $track-height);
-
-      .checkMark {
-        opacity: 1;
-        transition: opacity $speed ease-in-out;
-      }
-    }
-
-    @media screen and (-ms-high-contrast: active) {
-      .toggle-track {
-        border-radius: 0;
-      }
-    }
 
     .btnWrapper {
       display: flex;
