--- a/frontend/src/containers/Home/Home.scss
+++ b/frontend/src/containers/Home/Home.scss
@@ -1,186 +1,244 @@
-.app__home {
-    padding-top: var(--navbar-height);
-    width: 100%;
-    height: 67.5vh;
-    .app__home-firstSection {
-        position: relative;
-        width: 100%;
-        height: 100%;
 
-        img {
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-        }
-        
-            svg {
-            position: absolute;
-                height: 4rem;
-                width: 4rem;
-                color: white;
-                cursor: pointer;
-            }
-
-        .back {
-            left: 1rem;
-            top: 50%;
-            transform: translateY(-50%);
-        }
-
-        .forward {
-            right: 1rem;
-            top: 50%;
-            transform: translateY(-50%);
-        }
-    }
-    
+.hero-btn{
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 12px 34px;
+  font-size: 13px;
+  background: transparent ;
+  position: relative;
+  cursor: pointer;
+}
+.hero-btn:hover{
+  border:  1px solid #f44336 ;
+  background: #f44336;
+  transform: 1s;
 }
 
-.app__home-secondSection{
-    padding: 5% 0;
-    background: #f6f6f6;
+.red-btn{
+  border: 1px solid #f44336;
+  background: transparent;
+  color: #f44336;
+}
 
- .reverse{
-        flex-direction: row-reverse;
-        padding-left: 10% !important;
+.red-btn:hover{
+  color: #fff;
+}
+.row {
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.header {
+  min-height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url(../../assets/ubt.jpg);
+  background-position: center;
+  background-size: cover;
+  position: relative;
+
+  .text-box {
+    width: 90%;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+
+    
+    .hero-btn:hover{
+      border:  1px solid #f44336 ;
+      background: #f44336;
+      transform: 1s;
     }
 
-.app__home-secondSection-container{
-    padding: 0 3%;
+    h1 {
+      font-size: 62px;
+
+      @media (max-width: 700px) {
+        font-size: 20px;
+      }
+    }
+
+    p {
+      margin: 10px 0 40px;
+      font-size: 14px;
+      color: #fff;
+    }
+  }
+
+  .hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+
+    :hover {
+      border: 1px solid #f44336;
+      background: #f44336;
+      transform: 1s;
+    }
+  }
+}
+
+
+.campus {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
+
+  .row {
+    margin-top: 5%;
     display: flex;
-    justify-content: space-around;
-    height: 42rem;
-    padding-bottom: 5%;
+    justify-content: space-between;
 
-    @media screen and (max-width: 1300px) {
-        height: 40rem;
-    }
+    .campus-col {
+      flex-basis: 32%;
+      border-radius: 10px;
+      margin-bottom: 30px;
+      position: relative;
+      overflow: hidden;
 
-    @media screen and (max-width: 1200px) {
-        height: 38rem;
-    }
-
-    @media screen and (max-width: 1100px) {
-        height: 36rem;
-    }
-    @media screen and (max-width: 1000px) {
-        display: grid;
-        height: fit-content;
-        padding-bottom: 25px;
-        padding-left: 0 !important;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.5);
-        &:last-child{
-            border-bottom: none;
-        }
-    }
-
-    .image-container{
-        width: 42%;
-        @media screen and (max-width: 1000px) {
-            width: 100%;
-            height: auto; 
-            display: flex;
-            justify-content: center;
-        }
-
-
-        img{
+      img {
         width: 100%;
-        height: 100%;
-
-        @media screen and (max-width: 1000px) {
-            align-content: center;
-            height: 90%;
-            margin: auto;
-        }
-        }
+        display: block;
+      }
     }
 
-    .text-container{
-        display: flex;
-        flex-direction: column;
-        margin: auto 0;
-        justify-items: center;
-        text-align: center;
-        align-items: center;
-        padding-right: 5%;
-        
-        @media screen and (max-width: 1000px) {
-            width: 95%;
-            margin: 0 auto;
-            padding: 0;
+    .layer {
+      background: transparent;
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transition: 0.5s;
+
+      &:hover {
+        background: rgba(226, 0, 0, 0.7);
+
+        h3 {
+          bottom: 49%;
+          opacity: 1;
         }
+      }
 
-
-        h2{
-            font-size: 39px;
-            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            text-transform: uppercase;
-            font-weight: 100;
-            color: #000;
-            letter-spacing: .1em;
-            line-height: 1.25em;
-            margin-bottom: 0.3em;
-            max-width: 300px;
-
-            @media screen and (max-width: 1000px) {
-                font-size: 27px;
-                margin: 0;
-            }
-        }
-
-        p{
-            font-size: 16px;
-            line-height: 24px;
-            margin: 15px 0 22px;
-            padding: 0;
-
-            @media screen and (max-width: 1000px) {
-                margin: 0;
-                padding: 2% 0;
-                font-size: 14px;
-            }
-        }
-
-        .button-59 {
-            display: inline-block;
-            text-align: center;
-            background: 0 0;
-            padding: 17px 27px;
-            font-size: 16px;
-            line-height: 14px;
-            font-family: 'Brandon Text W01';
-            font-weight: 500;
-            font-style: normal;
-            border: 1px solid #c69a50;
-            color: #fff;
-            text-transform: uppercase;
-            cursor: pointer;
-            transition: .3s all;
-            outline: 0;
-            color: #414042;
-            position: relative;
-            transition: .5s ease-in-out;
-            width: 80%;
-          }
-          
-          .button-59:focus {
-            color: #171e29;
-          }
-          
-          .button-59:hover {
-            border-color:  #171e29;
-          }
-    
-          
-          @media (min-width: 768px) {
-            .button-59 {
-              min-width: 170px;
-            }
-          }
-            
+      h3 {
+        width: 100%;
+        font-weight: 500;
+        color: #fff;
+        font-size: 26px;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%);
+        position: absolute;
+        opacity: 0;
+        transition: 0.5s;
+      }
     }
-
+  }
 }
 
+.facilities {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
+
+  .facilities-col {
+    flex-basis: 31%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+
+    img {
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    p {
+      padding: 0;
+    }
+
+    h3 {
+      margin-top: 16px;
+      margin-bottom: 15px;
+      text-align: left;
+    }
+  }
+}
+
+.testimonial {
+  width: 80%;
+  margin: auto;
+  padding-top: 100px;
+  text-align: center;
+  .testimonial-col {
+    flex-basis: 44%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+    background: #fff3f3;
+    padding: 25px;
+    cursor: pointer;
+    display: flex;
+
+    img {
+      height: 40px;
+      margin-left: 5px;
+      margin-right: 30px;
+      border-radius: 50%;
+
+      @media (max-width: 700px) {
+        margin-left: 0px;
+        margin-right: 15px;
+      }
+    }
+
+    p {
+      padding: 0;
+    }
+
+    h3 {
+      margin-top: 15px;
+      text-align: left;
+    }
+
+    .fa {
+      color: rgb(255, 0, 43);
+    }
+  }
+}
+
+.cta {
+  margin: 100px auto;
+  width: 80%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(../../assets/banner2.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  text-align: center;
+  padding: 100px 0;
+
+  h1 {
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
+
+    @media (max-width: 700px) {
+      font-size: 24px;
+    }
+  }
 }
