Added a Chat Assistant for Users to Help using Student Managment System

--- a/frontend/src/containers/Auth/Login/Login.scss
+++ b/frontend/src/containers/Auth/Login/Login.scss
@@ -101,6 +101,7 @@
       transition: all 0.15s ease-in-out;
       opacity: 1;
       cursor: pointer;
+      color: #000;
 
       &:hover {
         box-shadow: rgba(0, 0, 0, 0.2) 0px -2.5px 20px;
