--- a/frontend/src/containers/Auth/Register/Register.scss
+++ b/frontend/src/containers/Auth/Register/Register.scss
@@ -205,6 +205,7 @@
         transition: all 0.15s ease-in-out;
         opacity: 1;
         cursor: pointer;
+        color: #000;
 
         &:hover {
           box-shadow: rgba(0, 0, 0, 0.2) 0px -2.5px 20px;
